--- a/WindowsInformation/WindowsService/WindowsInformationApi/OpenFilesRestApi.csproj
+++ b/WindowsInformation/WindowsService/WindowsInformationApi/OpenFilesRestApi.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{51ECB320-9AA2-4D83-876C-C6BBAFEC41FF}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>WindowsInformationApi</RootNamespace>
-    <AssemblyName>WindowsInformationApi</AssemblyName>
+    <RootNamespace>OpenFilesRestApi</RootNamespace>
+    <AssemblyName>OpenFilesRestApi</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
