Added additional tests.

--- a/WindowsInformation/WindowsInformation/WindowsInformation.csproj
+++ b/WindowsInformation/WindowsInformation/WindowsInformation.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Files\FileLockFilter.cs" />
+    <Compile Include="Files\IOpenFiles.cs" />
     <Compile Include="Files\OpenFiles.cs" />
     <Compile Include="Files\Models\FileLock.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
