--- a/WindowsInformation/WindowsService/WindowsInformationApi/OpenFilesRestApi.csproj
+++ b/WindowsInformation/WindowsService/WindowsInformationApi/OpenFilesRestApi.csproj
@@ -58,7 +58,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -81,7 +81,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="OpenFilesRestApi_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\WindowsInformation\WindowsInformation.csproj">
